; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp-tls/extr_esp_tls.c_esp_tls_conn_new.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp-tls/extr_esp_tls.c_esp_tls_conn_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"Failed to open new connection\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @esp_tls_conn_new(i8* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %12 = call i64 @calloc(i32 1, i32 4)
  %13 = inttoptr i64 %12 to i32*
  store i32* %13, i32** %10, align 8
  %14 = load i32*, i32** %10, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %4
  store i32* null, i32** %5, align 8
  br label %39

17:                                               ; preds = %4
  br label %18

18:                                               ; preds = %17, %38
  %19 = load i8*, i8** %6, align 8
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* %8, align 4
  %22 = load i32*, i32** %9, align 8
  %23 = load i32*, i32** %10, align 8
  %24 = call i32 @esp_tls_low_level_conn(i8* %19, i32 %20, i32 %21, i32* %22, i32* %23)
  store i32 %24, i32* %11, align 4
  %25 = load i32, i32* %11, align 4
  %26 = icmp eq i32 %25, 1
  br i1 %26, label %27, label %29

27:                                               ; preds = %18
  %28 = load i32*, i32** %10, align 8
  store i32* %28, i32** %5, align 8
  br label %39

29:                                               ; preds = %18
  %30 = load i32, i32* %11, align 4
  %31 = icmp eq i32 %30, -1
  br i1 %31, label %32, label %37

32:                                               ; preds = %29
  %33 = load i32*, i32** %10, align 8
  %34 = call i32 @esp_tls_conn_delete(i32* %33)
  %35 = load i32, i32* @TAG, align 4
  %36 = call i32 @ESP_LOGE(i32 %35, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  store i32* null, i32** %5, align 8
  br label %39

37:                                               ; preds = %29
  br label %38

38:                                               ; preds = %37
  br label %18

39:                                               ; preds = %32, %27, %16
  %40 = load i32*, i32** %5, align 8
  ret i32* %40
}

declare dso_local i64 @calloc(i32, i32) #1

declare dso_local i32 @esp_tls_low_level_conn(i8*, i32, i32, i32*, i32*) #1

declare dso_local i32 @esp_tls_conn_delete(i32*) #1

declare dso_local i32 @ESP_LOGE(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
